seems that the parsing is workin, need to creat a validate to the parsing of the program, to check if the program is valid